<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/button_bottom_menu_takePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/my_takepic"
        android:textColor="@color/msg_confirm_color"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />

    <Button
        android:id="@+id/button_bottom_menu_choicePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_camera_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/my_photo_choice"
        android:textColor="@color/msg_confirm_color"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_bottom_menu_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/cancel"
        android:textColor="@color/msg_cancel_color"
        android:textSize="20sp" />

</LinearLayout>