<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
     >

    <LinearLayout
        android:id="@+id/layout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
         >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            
        <ImageView
        android:id="@+id/imageView_Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"

        android:visibility="gone"
        />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            
            android:text="@string/delete_prompt"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        </LinearLayout>
        
        <!-- 横线 -->
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textview_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"

            android:gravity="center_vertical"
            android:background="@color/navy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textview_content"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/exit"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#D1D1D1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@drawable/left_btn_select"
                android:text="@string/cancel" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#D1D1D1" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@drawable/right_btn_select"
                android:text="@string/_confirm_text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>