<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_information_background"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textview_whattosay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:textSize="20sp"
        android:text="@string/what_to_say" />


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/topic_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"

            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/feedback_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="200"
                android:background="@drawable/edittext_bg_shape"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="120.0dip"
                android:textColor="@color/black"
                android:textColorHint="#ffcbcbcb"
                android:textSize="20sp"
                 />

            <RelativeLayout
                android:id="@+id/layout_wordsize_limit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/feedback_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:visibility="visible"
                >

                <TextView
                    android:id="@+id/text_modify_service_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"

                    android:textSize="14sp"
                    android:clickable="true"
                    android:text="@string/input_max_size"
                    android:visibility="visible"/>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="40dp" >

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_positive"
                    android:gravity="center"
                    android:onClick="login"
                    android:text="@string/confirm_send"

                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>