<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_information_background"
    android:orientation="vertical" >

    <!-- 1. logo layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/msp_mainpage_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/msp_image_mainpage" />

        <TextView
            android:id="@+id/textview_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingTop="14dp"
            android:text="@string/software_version"
            android:textSize="16sp" />


    </LinearLayout>

    <!-- 2. version && feedback layout -->
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:clickable="true">

            <TextView
                android:id="@+id/textview_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/my_system_info"/>

            <ImageView
                android:id="@+id/imageView_info_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:src="@mipmap/msp_right_arrow_gray" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/item_line_color" />

        <!-- 2..1 version  layout -->
        <LinearLayout
            android:id="@+id/ll_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:clickable="true">

            <TextView
                android:id="@+id/textview_check_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/my_check_update_version" />

            <ImageView
                android:id="@+id/imageView_check_version_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:src="@mipmap/msp_right_arrow_gray" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@color/item_line_color" />

        <!-- 2.2 feedback  layout -->
        <LinearLayout
            android:id="@+id/ll_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:clickable="true">

            <TextView
                android:id="@+id/textview_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:text="@string/my_feedback" />

            <ImageView
                android:id="@+id/imageView_about_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="20dp"
                android:src="@mipmap/msp_right_arrow_gray" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>